# docs-cpp

./: .gitignore  README.md
learning/00_Building/compiling/: animal.cpp  animal.h  main.cpp  object.cpp  person.cpp
learning/00_Building/gdb/: animal.cpp  main.cpp  object.cpp  object.h  person.cpp  person.h
learning/01_Functions/callback/: CMakeLists.txt  main.cpp
learning/01_Functions/lambda/: main.cpp  program
learning/03_Vectors/: CMakeLists.txt  main.cpp
learning/03_Vectors/sort/: CMakeLists.txt  main.cpp  sort.cpp  sort.hpp
learning/05_Data_Types/classes_de_armazenamento/: external.cpp  main.cpp
learning/05_Data_Types/structs/: CmakeLists.txt
learning/05_Data_Types/tuples/: CMakeLists.txt  main.cpp
learning/05_Data_Types/union/: CMakeLists.txt  main.cpp  union.hpp
learning/06_Classes/dependecies/: 01_simple_pointer.cpp  02_simple_pointer_fixed.cpp  03_smart_pointer.cpp  04_smart_pointer_fixed.cpp  CMakeLists.txt  main.cpp  smart_pointers.hpp
learning/06_Classes/interfaces/: CMakeLists.txt  main.cpp  rectangle.cpp  shape.cpp  triangle.cpp
learning/06_Classes/poo/: CMakeLists.txt  main.cpp
learning/06_Classes/specialization/: CMakeLists.txt  main  main.cpp
learning/07_Cool_Operators/: CMakeLists.txt
learning/07_Cool_Operators/ellipse_operators/src/: CMakeLists.txt  ellipse_operators.cpp
learning/10_Networking/sockets/: CMakeLists.txt
learning/10_Networking/sockets/include/: client.hpp  server.hpp
learning/10_Networking/sockets/src/: client.cpp  server.cpp
learning/12_Debugging/: GDB.md  Valgrind.md
learning/gdb-valgrind/: Notes.md
(+67 files in other folders)
